# archer

./: .gitignore  .mergify.yml  Cargo.toml  README.md  package_layout.txt
.github/workflows/: test.yml
src/lib/: alpm.rs  clippy.toml  consts.rs  error.rs  lib.rs  prelude.rs  tests.rs  types.rs  utils.rs
src/lib/builder/: bare.rs  mod.rs  nspawn.rs  tests.rs
src/lib/database/: builder.rs  compressor.rs  decompressor.rs  mod.rs  pacman.rs  tests.rs
src/lib/database/types/: archer.rs  date_serde.rs  mod.rs  pacman.rs
src/lib/parser/: mod.rs  pacman.rs  tests.rs
src/lib/repository/: aur.rs  cached.rs  custom.rs  empty.rs  merged.rs  mod.rs  pacman.rs  tests.rs
src/lib/resolver/: mod.rs  planner.rs  tests.rs  tree_resolv.rs  types.rs
src/lib/resolver/types/: context.rs  graph.rs  mod.rs  plan.rs  resolve.rs
src/lib/storage/: mod.rs  pool.rs  tests.rs  transaction.rs  types.rs
src/lib/storage/providers/: filesystem.rs  mod.rs  s3.rs
src/lib/storage/types/: bytestream.rs  lockfile.rs  mod.rs  package.rs
src/lib/types/: custom_package.rs  date_serde.rs  depend.rs  local_package.rs  mod.rs  package.rs  pacman.rs  remote_package.rs  version.rs
tests/: naive.rs
tests/archives/: test.tar  test.tar.xz  test.tar.zst
tests/pacman_conf/: mirrorlist  mirrorlist_clean  pacman.conf
tests/pkgs/: a52dec-0.7.4-11-x86_64.pkg.tar.zst  aalib-1.4rc5-14-x86_64.pkg.tar.zst  accounts-qml-module-0.7-3-x86_64.pkg.tar.zst  accountsservice-0.6.55-3-x86_64.pkg.tar.zst  acl-2.3.1-1-x86_64.pkg.tar.zst
