[package]
name = "archer"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2018"

[lib]
name = "archer_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "archer_bin"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raur = {version="5.0", features=["blocking"]}
alpm = "1"
anyhow = "1.0"
thiserror = "1.0"
configparser = "2.0"
chrono = "0.4"
url = "2.2"
ranges = "0.3"
itertools = "0.10"
lazy_static = "1.4"
reqwest = {version="0.11", features=["blocking", "gzip", "brotli"]}
rayon = "1.5"
maplit = "1.0"
enumflags2 = "0.7"
online-scc-graph = {git="https://github.com/PhotonQuantum/online-transitive-closure-rs", branch="simplify"}
indexmap = "1.6"
rustympkglib = {git="https://github.com/PhotonQuantum/rustympkglib"}

[dev-dependencies]
rstest = "0.9"