[package]
name = "archer"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2018"

[lib]
name = "archer_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "archer_bin"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raur = {version="5.0", features=["blocking"]}
alpm = "2"
anyhow = "1.0"
thiserror = "1.0"
chrono = {version="0.4", features=["serde"]}
url = "2.2"
ranges = "0.3"
itertools = "0.10"
lazy_static = "1.4"
reqwest = {version="0.11", features=["blocking", "gzip", "brotli"]}
rayon = "1.5"
maplit = "1.0"
enumflags2 = "0.7"
online-scc-graph = {git="https://github.com/PhotonQuantum/online-transitive-closure-rs", branch="simplify"}
indexmap = "1.6"
rustympkglib = {git="https://github.com/PhotonQuantum/rustympkglib"}
archlinux-repo-parser = "0.1"
serde = "1.0"
serde_with = "1.9"
serde_json = "1.0"
pkginfo = {git="https://github.com/PhotonQuantum/pkginfo-rs"}
tar = "0.4"
zstd = "0"
flate2 = "1.0"
xz2 = "0.1"
infer = "0.4"
derive_builder = "0.10"
md5 = "0.7"
sha2 = "0.9"
async-trait = "0.1"
tokio = {version="1.6", features=["full"]}
tempfile = "3.2"
rusoto_core = "0.46"
rusoto_s3 = "0.46"
futures = "0.3"
bytes = "1.0"
regex = "1.5"
users = "0.11"
rust-ini = "0.17"

[dev-dependencies]
rstest = "0.9"
testcontainers = "0.12"
rand = "0.8"
fs_extra = "1.2"